   PyKDE is not installed.
 - packaging-apt-dpkg.py: Ignore hardening-wrapper diversions, to make
   gcc_ice_hook work if hardening-wrapper is installed.
 - apport_python_hook: Respect $APPORT_REPORT_DIR.
 - apport_python_hook: Limit successive crashes per program and user to 3 per
   day, just like signal crashes. (LP: #603503)

1.24 (2011-10-19):
------------------
Bug fixes:
 - backends/packaging-apt-dpkg.py, install_packages(): Also copy
   apt/sources.list.d/ into sandbox.
 - backends/packaging-apt-dpkg.py, install_packages(): Install apt keyrings
   from config dir or from system into sandbox. (LP: #856216)
 - packaging.py, backends/packaging-apt-dpkg.py: Define that install_packages()
   should return a SystemError for broken configs/unreachable servers etc., and
   fix the apt/dpkg implementation accordingly.
 - apport-retrace: Don't crash, just give a proper error message if servers are
   unreachable, or configuration files are broken. (LP: #859248)
 - backends/packaging-apt-dpkg.py: Fix crash when /etc/apport/native-origins.d
   contains any files. (LP: #865199)
 - hookutils, recent_logfile(): Fix invalid return value if log file is not
   readable. (LP: #819357)
 - test/crash: Fix race condition in the "second instance terminates
   immediately" check.
 - hookutils.py: Replace attach_gconf() with a no-op stub. It used static
   python modules like "gconf" which broke the PyGI GTK user interface, and
   gconf is rather obsolete these days.
 - ui.py, open_url(): Greatly simply and robustify by just using xdg-open. This
   already does the right thing wrt. reading the default browser from GNOME,
   KDE, XCE, and other desktops. (LP: #198449)
 - data/general-hooks/generic.py: Only attach ~/.xsession_errors if the bug is
   reported in the same XDG session as the crash happened. (LP: #869974)
 - Ignore crashes for programs which got updated in between the crash and
   reporting. (LP: #132904)